mydev/codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_uses_generic_limit_labels_for_unsupported_windows.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v[[version]])                                              │
│                                                                              │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date                │
│ information on rate limits and credits                                       │
│                                                                              │
│  Model:                   gpt-5.1-codex-max (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                                    │
│  Permissions:             Custom (workspace with network access, Ask for app │
│  Agents.md:               <none>                                             │
│                                                                              │
│  Token usage:             1.2K total  (800 input + 400 output)               │
│  Context window:          100% left (1.2K used / 272K)                       │
│  Usage limit:             [█████████████░░░░░░░] 65% left                    │
│                           (resets 07:08 on 7 May)                            │
│  Secondary usage limit:   [██████████░░░░░░░░░░] 50% left                    │
│                           (resets 07:08 on 8 May)                            │
╰──────────────────────────────────────────────────────────────────────────────╯
